feat: done crud author service and category service
